improvements on fdl.

--- a/doc/latex/fdl.tex
+++ b/doc/latex/fdl.tex
@@ -13,7 +13,7 @@
  
  \bigskip
  
-     http://fsf.org/
+     \url{http://fsf.org/}
   
  \bigskip
  
@@ -53,7 +53,7 @@ principally for works whose purpose is instruction or reference.
 \begin{center}
 {\small\bf 1. APPLICABILITY AND DEFINITIONS\par}
 \phantomsection
-\addcontentsline{toc}{section}{1. APPLICABILITY AND DEFINITIONS}
+%\addcontentsline{toc}{section}{1. APPLICABILITY AND DEFINITIONS}
 \end{center}
 
 {\tiny 
@@ -150,7 +150,7 @@ no effect on the meaning of this License.
 \begin{center}
 {\small\bf 2. VERBATIM COPYING\par}
 \phantomsection
-\addcontentsline{toc}{section}{2. VERBATIM COPYING}
+%\addcontentsline{toc}{section}{2. VERBATIM COPYING}
 \end{center}
 
 {\tiny
@@ -171,7 +171,7 @@ you may publicly display copies.
 \begin{center}
 {\small\bf 3. COPYING IN QUANTITY\par}
 \phantomsection
-\addcontentsline{toc}{section}{3. COPYING IN QUANTITY}
+%\addcontentsline{toc}{section}{3. COPYING IN QUANTITY}
 \end{center}
 
 {\tiny
@@ -215,7 +215,7 @@ them a chance to provide you with an updated version of the Document.
 \begin{center}
 {\small\bf 4. MODIFICATIONS\par}
 \phantomsection
-\addcontentsline{toc}{section}{4. MODIFICATIONS}
+%\addcontentsline{toc}{section}{4. MODIFICATIONS}
 \end{center}
 
 {\tiny
@@ -337,7 +337,7 @@ imply endorsement of any Modified Version.
 \begin{center}
 {\small\bf 5. COMBINING DOCUMENTS\par}
 \phantomsection
-\addcontentsline{toc}{section}{5. COMBINING DOCUMENTS}
+%\addcontentsline{toc}{section}{5. COMBINING DOCUMENTS}
 \end{center}
 
 {\tiny
@@ -368,7 +368,7 @@ Entitled ``Endorsements''.
 \begin{center}
 {\small\bf 6. COLLECTIONS OF DOCUMENTS\par}
 \phantomsection
-\addcontentsline{toc}{section}{6. COLLECTIONS OF DOCUMENTS}
+%\addcontentsline{toc}{section}{6. COLLECTIONS OF DOCUMENTS}
 \end{center}
 
 {\tiny
@@ -387,7 +387,7 @@ other respects regarding verbatim copying of that document.
 \begin{center}
 {\small\bf 7. AGGREGATION WITH INDEPENDENT WORKS\par}
 \phantomsection
-\addcontentsline{toc}{section}{7. AGGREGATION WITH INDEPENDENT WORKS}
+%\addcontentsline{toc}{section}{7. AGGREGATION WITH INDEPENDENT WORKS}
 \end{center}
 
 {\tiny
@@ -413,7 +413,7 @@ aggregate.
 \begin{center}
 {\small\bf 8. TRANSLATION\par}
 \phantomsection
-\addcontentsline{toc}{section}{8. TRANSLATION}
+%\addcontentsline{toc}{section}{8. TRANSLATION}
 \end{center}
 
 {\tiny
@@ -440,7 +440,7 @@ title.
 \begin{center}
 {\small\bf 9. TERMINATION\par}
 \phantomsection
-\addcontentsline{toc}{section}{9. TERMINATION}
+%\addcontentsline{toc}{section}{9. TERMINATION}
 \end{center}
 
 
@@ -474,7 +474,7 @@ not give you any rights to use it.
 \begin{center}
 {\small\bf 10. FUTURE REVISIONS OF THIS LICENSE\par}
 \phantomsection
-\addcontentsline{toc}{section}{10. FUTURE REVISIONS OF THIS LICENSE}
+%\addcontentsline{toc}{section}{10. FUTURE REVISIONS OF THIS LICENSE}
 \end{center}
 
 
@@ -502,7 +502,7 @@ Document.
 \begin{center}
 {\small\bf 11. RELICENSING\par}
 \phantomsection
-\addcontentsline{toc}{section}{11. RELICENSING}
+%\addcontentsline{toc}{section}{11. RELICENSING}
 \end{center}
 
 {\tiny
@@ -538,7 +538,7 @@ provided the MMC is eligible for relicensing.
 \begin{center}
 {\small\bf ADDENDUM: How to use this License for your documents\par}
 \phantomsection
-\addcontentsline{toc}{section}{ADDENDUM: How to use this License for your documents}
+%\addcontentsline{toc}{section}{ADDENDUM: How to use this License for your documents}
 \end{center}
 
 {\tiny
